# swing

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: custom-format.rs  custom-theme.rs  default.rs  disco.rs  inline-gradient.rs  json.rs  linear-gradient.rs  main.rs  multi-line-gradient.rs  multi-threaded.rs  util.rs
src/: color.rs  config.rs  lib.rs  paint.rs  sculpt.rs  theme.rs  write.rs
src/example/: main.rs
