[package]
name = "disco"
version = "0.1.0"
authors = ["Diffuse <48339639+diffuse@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
chrono = "0.4"
serde_json = { version = "1.0", features = ["preserve_order"]}
colored = "2"

[dev-dependencies]
lipsum = "0.8"
num = "0.4"
rand = "0.8"
