[package]
name = "disco"
version = "0.1.0"
authors = ["Diffuse <48339639+diffuse@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/diffuse/disco"
license = "MIT/Apache-2.0"

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
serde_json = { version = "1.0", features = ["preserve_order"]}
time = { version = "0.3.11", features = ["formatting"] }
colored = "2"
unicode-segmentation = "1.9.0"

[dev-dependencies]
lipsum = "0.8"
num = "0.4"
rand = "0.8"
